--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -127,7 +127,10 @@
            <number>1300</number>
           </property>
           <property name="maximum">
-           <number>1400</number>
+           <number>1500</number>
+          </property>
+          <property name="value">
+           <number>1403</number>
           </property>
          </widget>
         </item>
@@ -365,7 +368,7 @@
      <x>0</x>
      <y>0</y>
      <width>586</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
